<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_register_text"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="14sp"
        android:textColor="@color/colorTextPrimary"/>

    <EditText
        android:id="@+id/etRegisterUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginText"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/fragment_register_username"/>

    <EditText
        android:id="@+id/etRegisterEmailField"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterUsernameField"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/fragment_login_email"/>

    <Button
        android:id="@+id/btnCheckValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/fragment_register_check_valid"
        android:layout_alignBaseline="@+id/etRegisterEmailField"
        android:layout_alignBottom="@+id/etRegisterEmailField"
        android:layout_alignRight="@+id/etRegisterPasswordField"
        android:layout_alignEnd="@+id/etRegisterPasswordField" />

    <EditText
        android:id="@+id/etRegisterPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterEmailField"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:hint="@string/fragment_register_password"/>

    <TextView
        android:id="@+id/etPasswordFormatTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/etRegisterPasswordField"
        android:visibility="gone"
        android:text="@string/fragment_register_password_format_tip"/>

    <EditText
        android:id="@+id/etRegisterPasswordCheckField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordFormatTip"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:hint="@string/fragment_register_check_password"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/etRegisterPasswordField"
        android:layout_below="@id/etRegisterPasswordCheckField"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/fragment_register_btnCreate" />

</RelativeLayout>