<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="recurrent.recipe.UserProfile">

    <TextView
        android:id="@+id/tvUserProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_user_profile_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnSavedRecipes"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMyRecipes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/fragment_user_profile_saved_recipes"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/fragment_user_profile_btnSignOut"
        android:layout_marginBottom="62dp"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tvUsername"
        tools:text="Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnMyRecipes"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSavedRecipes"
        android:layout_alignStart="@+id/btnSavedRecipes"
        android:layout_centerVertical="true"
        android:text="@string/fragment_user_profile_my_recipes"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserProfileTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:scaleType="center"
        app:srcCompat="@mipmap/ic_launcher"/>

    <Button
        android:id="@+id/btnEditDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnMyRecipes"
        android:layout_alignRight="@+id/btnMyRecipes"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_user_profile_btnEditDetails"
        android:textAllCaps="false"/>

</RelativeLayout>
