<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_text"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/etUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginText"
        android:layout_margin="16dp"
        android:inputType="text"
        android:hint="@string/fragment_login_username"/>

    <EditText
        android:id="@+id/etPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsernameField"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:hint="@string/fragment_login_password"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etPasswordField"
        android:layout_below="@id/etPasswordField"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/fragment_login_btnRegister" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/etPasswordField"
        android:layout_below="@id/etPasswordField"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/fragment_login_btnLogin" />

    <TextView
        android:id="@+id/tvTestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvTestRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTestLogin"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"/>

</RelativeLayout>