<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivSummary_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient" />
    </FrameLayout>

    <GridLayout
        android:id="@+id/glRecipeSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:columnCount="3"
        android:rowCount="2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvSummary_ingredients_num"
            tools:text="num"
            android:layout_column="0"
            android:layout_row="0"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/tvSummary_preptime_num"
            tools:text="numH numM"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvSummary_cals_num"
            tools:text="cal num"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textColor="#ffffff" />

        <TextView
            android:text="@string/fragment_recipe_summary_ingredients"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textColor="#ffffff" />

        <TextView
            android:text="@string/fragment_recipe_summary_preparation_time"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textColor="#ffffff" />

        <TextView
            android:text="@string/fragment_recipe_summary_calories"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:textColor="#ffffff" />

    </GridLayout>

    <TextView
        android:id="@+id/tvSummary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/glRecipeSummary"
        android:layout_above="@id/glRecipeSummary"
        android:textColor="#ffffff"
        android:textSize="40sp"
        tools:text="Title" />

</RelativeLayout>